2017-08-14  James J Balamuta  <balamut2@illinois.edu>

        * vignettes/Rcpp-FAQ.Rnw: Sunset macOS documentation dealing with
        toolchains by redirecting to the R Installation and Administration manual
        * vignettes/.gitignore: Added various LaTeX build artifacts to ignore.

2017-08-05  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version and date

        * inst/include/Rcpp/XPtr.h: Whitespace only-changes

2017-08-04  Lei Yu  <leiyu_1981@qq.com>

        * inst/include/Rcpp/Module.h: Correct one closing parenthesis

2017-07-13  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.12.12
        * inst/NEWS.Rd: Release 0.12.12
        * inst/bib/Rcpp.bib: Release 0.12.12
        * inst/include/Rcpp/config.h: Release 0.12.12

        * README.md: Updated counts for dependents and tests

        * debian/*: Changes for Debian release of 0.12.12

2017-07-10  Jeff Pollock  <jeffpollock9@gmail.com>

        * inst/include/Rcpp/Module.h: Avoid unused variable warning
        * inst/include/Rcpp/Module_generated_Constructor.h: Ditto

2017-07-09  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Ditto

        * inst/NEWS.Rd: Added missing entries

2017-07-08  Kirill Müller  <krlmlr@mailbox.org>

        * inst/include/Rcpp/vector/no_init.h: Accept R_xlen_t instead of int

        * inst/include/Rcpp/internal/wrap.h: Use R_xlen_t not int in loop unroll
        * inst/include/Rcpp/macros/unroll.h: Ditto
        * inst/include/Rcpp/vector/Vector.h: Ditto

2017-07-05  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Ditto

2017-07-02  JJ Allaire  <jj@rstudio.com>

        * src/attributes.cpp: Generate C++ native routines with underscore