@@ -84,20 +84,20 @@ public:
         return const_start[i] ;
     }
 
+    inline const const_iterator begin() const {
+        return const_start ;
+    }
+
+    inline const const_iterator end() const {
+        return const_start + n ;
+    }
+
     inline iterator begin(){
         return start ;
     }
 
-    inline const_iterator begin() const {
-        return const_start ;
-    }
-
     inline iterator end(){
         return start + n ;
-    }
-
-    inline const_iterator end() const {
-        return const_start + n ;
     }
 
     inline int size() const {
@@ -138,11 +138,11 @@ public:
         return const_start[i] ;
     }
 
-    inline const_iterator begin() const {
+    inline const const_iterator begin() const {
         return const_start ;
     }
 
-    inline const_iterator end() const {
+    inline const const_iterator end() const {
         return const_start + n ;
     }
 
