@@ -135,10 +135,10 @@ public:
 		R_xlen_t index;
 	} ;
 
-        typedef iterator const_iterator;
+    typedef iterator const_iterator;
 
-	inline iterator begin() const { return iterator(*this, 0) ; }
-	inline iterator end() const { return iterator(*this, size() ) ; }
+	inline const const_iterator begin() const { return iterator(*this, 0) ; }
+	inline const const_iterator end() const { return iterator(*this, size() ) ; }
 
 } ;
 
